Fixed errors reported by SonarLint (#310)
* Replace of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'

* Use a primitive boolean expression in FinancialTransactionRepository.existsByIdAndWalletUserId

* Define a constant instead of duplicating literal in FinancialTransactionCategoryServiceImpl

* Define a constant instead of duplicating literal in WalletServiceImpl

* Refactor the code of the lambda to have only one invocation possibly throwing a runtime exception in FinancialTransactionServiceImplTest and WalletCreateServiceImplTest classes.

* Deleted all user in BeforeEach method in RefreshTokenIT class.

---------

Co-authored-by: Miroslaw Gabrus <poczta@mirekgab.pl>